gcc/testsuite/g++.old-deja/g++.mike/ns5.C
// { dg-do assemble  }
namespace A {
  int i = 1;
}

int j = i;		// { dg-error "" } 
